Revision history for Perl extension pler

0.25 Tue 21 Aug 2007
	- When inside the t directory and the user uses tab-completion to specify the
	  filename, call the file they meant even after we chdir up to the root.

0.24 Tue 21 Aug 2007
	- I am an idiot, and didn't actually USE the Cwd::chdir in the below release
	  (this fixes that)

0.23 Tue 21 Aug 2007
	- Use Cwd::chdir instead of the core chdir so that $ENV{PWD} is kept up to date
	  (This prevents pler breaking code which uses $ENV{PWD})
	- Adding a more recent dependency on 3.00 Pathtools to make sure we have Cwd

0.22 Tue 21 Aug 2007
	- If no Makefile.PL, intuit the dist root by looking for a "lib" and "t" dir

0.21 Mon 20 Aug 2007
	- dumb is spelled with a "b", not a "p". Oh the irony :(

0.20 Thu  2 Aug 2007
	- Moving bin/pler to the more standard script/pler
	- Collapse Devel::Pler into pler.pm
	- Adding support for regenerating the Makefile from Makefile.PL
	  (only on Win32, because the Makefile is not capable of regenerating)
	- Set TERM=dumb if no TERM value is set
	  (prevents a noisy error when the debugger starts up)

0.19 skipped

0.18 Wed 16 May 2007
        - Adding the ability to run scripts from the t directory
        - Moving pler.pm to Devel::Pler
        - Moving bin/pler to pler.pm
        - Added a stubbed launch script as bin/pler

0.17 Fri 11 May 2007
        - Fixing a path bug that breaks Test::Files
	- Updated Test::Script dependency to 1.02

0.16 Tue  2 Jan 2007
	- Fixed a test bug I thought I'd fixed already

0.15 Mon  1 Jan 2007
	- Converted from Devel::Pler to just pler.pm to allow
	  for better installation and documentation on search.cpan.
	- You can now "cpan -i pler"

0.14 Fri 15 Sep 2006
	- exec() does not work on Win32 (and we assume cygwin).
	  Instead, use system() which uses more memory, but
	  does at least work.

0.13 Thu  3 Aug 2006
	- Bug fixes
	  (I honestly don't know his this crap gets out to CPAN)

0.12 Thu 25 Jul 2006