@@ -2,6 +2,15 @@
 
 use strict;
 
+# On some platforms (mostly Windows), we get errors because
+# of Term::Cap issues. To avoid this, set TERM=dumb if the
+# user does not have a TERM value already.
+# This doesn't remove all possible errors, just the most
+# annoying and common ones.
+BEGIN {
+	$ENV{TERM} ||= 'dumb';
+}
+
 use vars qw{$VERSION};
 BEGIN {
 	$VERSION = '0.25';
